--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,10 +7,27 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="sol_5pecia1.easyoptionmenu.MainActivity">
+    tools:context="sol_5pecia1.easyoptionmenu.MainActivity"
+    android:orientation="vertical"
+    >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/testButton1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:text="all enable"
+        />
+    <Button
+        android:id="@+id/testButton2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="enable 1 3 4"
+        />
+    <Button
+        android:id="@+id/testButton3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="enable 3"
+        />
+
+</LinearLayout>
