--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,19 +15,19 @@
         android:id="@+id/testButton1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="all enable"
+        android:text="all visible, enalbe"
         />
     <Button
         android:id="@+id/testButton2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="enable 1 3 4"
+        android:text="visible 1, invokable 3 4"
         />
     <Button
         android:id="@+id/testButton3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="enable 3"
+        android:text="visible 3, invokable 1"
         />
 
 </LinearLayout>
