--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,13 +21,13 @@
         android:id="@+id/testButton2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="visible 1, not enable 3 4"
+        android:text="visible 1, disable 3 4"
         />
     <Button
         android:id="@+id/testButton3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="visible 3, not enable 1"
+        android:text="visible 3, disable 1"
         />
 
 </LinearLayout>
